fix: prevent content overflowing parent block

--- a/components/ImageCards/image-card-author.module.scss
+++ b/components/ImageCards/image-card-author.module.scss
@@ -9,6 +9,7 @@ $AUTHOR--INSTAGRAM-LINE-HEIGHT: 22px;
     flex-direction: column;
     justify-content: flex-start;
     filter:opacity(1);
+    max-width: 100%;
 }
 
 .self:focus-within,
@@ -23,7 +24,9 @@ $AUTHOR--INSTAGRAM-LINE-HEIGHT: 22px;
     font-weight: lighter;
     line-height: $AUTHOR--NAME-LINE-HEIGHT;
     margin-top: 10px;
+    max-width: 100%;
     text-align: center;
+    word-wrap: break-word;
 }
 
 .instagram-account {
